# near-rustsdk-hello-world

./: index.html
contract/: Cargo.toml
contract/res/: hello_world.wasm
contract/src/: lib.rs
css/: app.55cc8a82.css
hello-world/: .env.example  deploy.sh  package-lock.json  package.json  vue.config.js
hello-world/public/: index.html
hello-world/src/: config.js  utils.js
hello-world/src/assets/scss/: app.scss
hello-world/src/components/: HelloWorld.vue
js/: app.78caa6cc.js  app.78caa6cc.js.map  chunk-vendors.0d6b7cf0.js  chunk-vendors.0d6b7cf0.js.map
